portfolio.css
:root{
    --site-bg-color:#E4DFDC;
    --main-palate-color: #606368;
    --secondary--palate-color: #3c4042;
    --text-color: #000000;
    --secondary-text-color: #606368;
}
  
* ,
*::after
*::before{
    box-sizing: border-box;
}

body{
    padding: 0;
    background-color: var(--site-bg-color);
    margin-left: 5%;
    margin-top: 8vh;
    height:100%;
}

.Navbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 8%;
    background-color: var(--site-bg-color);
    z-index: 1000;
}
.Nav{
    display: inline-flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
    border-bottom: 1px solid black;
}
.Nav .left-side, .Nav .right-side{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 50%;
    height: 100%;
}
.Nav .left-side{
    display: grid;
    grid-template-columns: 0.5fr 3fr 1fr;

}
.Nav .right-side{
    justify-content: flex-end;
}

.Navbar .Nav li{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px;
}

.Dev_name{
    font-size: 2.5vw;
    font-weight: bold;
    font-family: 'Jaro', sans-serif;
}
.icon{
    padding: 5px;
    font-size: 0.8vw;
    font-family: 'Jaro', sans-serif;
}
/*this is temperary, got this from chatGPT, not final solution for icons*/
.Navbar .Nav li img,
.Sidebar ul li img {
    width: 40px;
    height: 40px; 
    vertical-align: middle;
    margin : 0;
}
.Sidebar{
    position: absolute;
    top: 8%;
    left: 0;
    width: 5%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-right: 1px solid black;
}
.Sidebar ul{
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.welcome{
    justify-content: space-around;
    align-items: flex-start;
    display: flex;
    padding-left: 30px;
    padding-right: 30px;
}
.welcome-text{
    flex: 4;
    align-items: top;
    font-family: 'Jaro', sans-serif;
}

.welcome-text-semantics * {
    margin: 0;
}
.welcome-img{
    flex: 6;
    justify-content: center;
    align-items: center;
    display: flex;
}
.welcome-img img {
    width: 80%;
    height: auto;
    object-fit: cover;
}

